# pipelinehelper

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pipelinehelper.py  pyproject.toml  setup.py  tests.py
.github/workflows/: main.yml  pytest.yml
examples/: example.py  example_roc_auc.py
pipelinehelper/: __init__.py
tests/: test_basics.py  test_get_params.py  test_optional_methods.py  test_pipelinehelper.py  test_random_cv.py
