[tool.poetry]
name = "pipelinehelper"
version = "0.7"
description = "Swaps scikit pipeline elements but also supports grid parameter configurations."
authors = ["Benjamin Murauer <b.murauer@posteo.de>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = ">=3.6.1"
sklearn = "*"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pytest = "^5.4.3"
tox = "^3.15.2"
pre-commit = "^2.5.1"
black = "^19.10b0"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
