[tool.poetry]
name = "pipelinehelper"
version = "0.7.8"
description = "Swaps scikit pipeline elements but also supports grid parameter configurations."
authors = ["Benjamin Murauer <b.murauer@posteo.de>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6.1"
sklearn = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pre-commit = "^2.5.1"
twine = "^3.1.1"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
